# gahshomar

./: .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  Makefile.in  NEWS  PKGBUILD  README  README.md  _config.yml  about_page.glade  aclocal.m4  autogen.sh  calendar_widget.py  configure  configure.ac  day_widget.py  gah-shomar.in  gahshomar  gahshomar.doap  gahshomar.spec  gahshomar.sublime-project  gahshomar.sublime-workspace  gahshomar_indicator.py  gs_indicator.py  gs_main_window.py  gs_settings.py  gs_settings_page.py  index.html  index.md  jalali_date_persian_numbers.py  libappindicator.json  meson.build  months_widget.py  my_calendar.py  org.gahshomar.Gahshomar.json  org.gnome.Gahshomar.json  params.json  (+4 more)
GahShomar/: calendar_widget.py  day_widget.py  events_handler.py  gahshomar-indicator.py  gahshomar.py  gahshomar_indicator.py  jalali_date_persian_numbers.py  months_widget.py  my_calendar.py  persian-calendar.py  persian-calendar2.py  persian-calendar2.sublime-workspace  test.py
build-aux/meson/: postinstall.py
data/: AboutDialog.ui.in  Makefile.am  app-menu.ui  application.css  calendar-widget.ui  calendar-widget.ui~  day-widget.ui  gahshomar.1  gahshomar.appdata.xml.in  gahshomar.desktop.in  gahshomar.gresource.xml  icon_generator.py  meson.build  months-widget.ui  months-widget.ui~  org.gahshomar.Gahshomar.appdata.xml.in  org.gahshomar.Gahshomar.desktop.in  org.gahshomar.Gahshomar.gschema.xml  org.gahshomar.Gahshomar.service  org.gnome.Gahshomar.appdata.xml.in  org.gnome.Gahshomar.gschema.xml  persian-calendar.desktop  prefs.ui  settings-page.ui  settings_page.ui  window.ui
data/icons/: meson.build
debian/: changelog  control  copyright  gahshomar.dsc
flatpak/: org.gahshomar.Gahshomar.json
frontend/applet/gnome-shell/: Makefile.am  extension.js  extension.js.in  metadata.json.in
gahshomar/: Makefile.am  application.py  calendar.py  dbus_service.py  jalali_date_persian_numbers.py  khayyam  plugin_manager.py  settings_page.py  widgets.py  window.py
gahshomar/khayyam/: constants.py  tehran_timezone.py
help/: Makefile.am
help/C/: index.page  introduction.page
plugins/: Makefile.am
plugins/appindicator/: Makefile.am  appindicator.plugin  appindicator.py
plugins/main/: Makefile.am  main.plugin  main.py
plugins/noheaderbar/: Makefile.am  noheaderbar.plugin  noheaderbar.py
plugins/statusicon/: Makefile.am  statusicon.plugin  statusicon.py
po/: .intltool-merge-cache  LINGUAS  Makefile.in.in  POTFILES  POTFILES.in  POTFILES.skip  en.po  fa.po  gahshomar.pot  meson.build
src/: Makefile.am  Makefile.in  __init__.py  about-dialog.ui.in  api.py  app-menu.ui  appindicator.py  applet.py  calendar-widget.ui  calendar.py  date.py  day-widget.ui  gahshomar.gresource.xml  gahshomar.in  gahshomar.py  gi_composites.py  main.py  makefile.am  meson.build  months-widget.ui  preferences.py  preferences.ui  settings_page.py  statusicon.py  widgets.py  window.py  window.ui
src/GahShomar/: Makefile.in  gs_calendar.py  gs_calendar_widget.py  gs_day_widget.py  gs_events_handler.py  gs_indicator.py  gs_main_window.py  gs_months_widget.py  gs_plugin_manager.py  gs_settings.py  gs_settings_page.glade  gs_settings_page.py  gs_util.py
src/c/: Makefile.am  gahshomar.c  gahshomar.h  gahshomarapi.c  gahshomarapi.h  main.c
src/data/: Makefile.in  gahshomar.desktop
src/data/plugins/: icsevents.gs-plugin  icsevents.py  showclosebutton.gs-plugin  showclosebutton.py
src/khayyam/: __init__.py  algorithms.py  compat.py  constants.py  jalaali.py  jalali_date.py  jalali_datetime.py  tehran_timezone.py
src/python/gahshomar/: Makefile.am  __init__.py  calendar.py  indicator.py  settings_page.py  widgets.py  window.py
src/python/gahshomar/khayyam/: Makefile.am  helpers.py  jalali_date.py  jalali_datetime.py
