SUBDIRS = khayyam

appdir = $(pythondir)/gahshomar/

app_PYTHON = \
	__init__.py \
	application.py \
	window.py \
	widgets.py \
	settings_page.py \
	calendar.py \
	indicator.py \
	plugin_manager.py

# appkhayyamdir = $(pythondir)/gahshomar/khayyam/

# appkhayyam_PYTHON = \
# 	khayyam/algorithms.py \
# 	khayyam/compat.py \
# 	khayyam/constants.py \
# 	khayyam/helpers.py \
# 	khayyam/__init__.py \
# 	khayyam/jalali_date.py \
# 	khayyam/jalali_datetime.py \
# 	khayyam/tehran_timezone.py
