## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = gahshomar.py

## Directory where .class files will be installed
gahshomardir = $(pythondir)/gahshomar

gahshomar_PYTHON = \
	gahshomar.py \
	GahShomar/gs_main_window.py \
	GahShomar/gs_main_window.py \
	GahShomar/gs_util.py \
	GahShomar/gs_indicator.py \
	GahShomar/gs_calendar.py \
	GahShomar/gs_calendar_widget.py \
	GahShomar/gs_settings.py \
	GahShomar/gs_day_widget.py \
	GahShomar/gs_settings_page.py \
	GahShomar/gs_events_handler.py \
	GahShomar/gs_jalali_date_persian_numbers.py \
	GahShomar/gs_months_widget.py \
	GahShomar/gs_settings_page.glade \
	GahShomar/gs_plugin_manager.py \
	GahShomar/__init__.py

SUBDIRS = \
	GahShomar \
	data
