## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = gahshomar.py

## Directory where .class files will be installed
gahshomardir = $(pythondir)/gahshomar

gahshomar_PYTHON = \
	gahshomar.py \
	GahShomar/gs_main_window.py \
	GahShomar/gs_main_window.py \
	GahShomar/gs_util.py \
	GahShomar/gs_indicator.py \
	GahShomar/gs_calendar.py \
	GahShomar/gs_calendar_widget.py \
	GahShomar/gs_settings.py \
	GahShomar/gs_day_widget.py \
	GahShomar/gs_settings_page.py \
	GahShomar/gs_events_handler.py \
	GahShomar/gs_jalali_date_persian_numbers.py \
	GahShomar/gs_months_widget.py \
	GahShomar/gs_settings_page.glade \
	GahShomar/gs_plugin_manager.py \
	GahShomar/__init__.py \
	../README.md \
	data/gahshomar.desktop \
	data/Screenshot.png \
	data/plugins/icsevents.py \
	data/plugins/showclosebutton.py \
	data/plugins/icsevents.gs-plugin \
	data/plugins/showclosebutton.gs-plugin \
	data/icons/gahshomar-logo.png \
	data/icons/days/gahshomar-light-theme-31.png \
	data/icons/days/gahshomar-light-theme-30.png \
	data/icons/days/gahshomar-light-theme-29.png \
	data/icons/days/gahshomar-light-theme-28.png \
	data/icons/days/gahshomar-light-theme-27.png \
	data/icons/days/gahshomar-light-theme-26.png \
	data/icons/days/gahshomar-light-theme-25.png \
	data/icons/days/gahshomar-light-theme-24.png \
	data/icons/days/gahshomar-light-theme-23.png \
	data/icons/days/gahshomar-light-theme-22.png \
	data/icons/days/gahshomar-light-theme-21.png \
	data/icons/days/gahshomar-light-theme-20.png \
	data/icons/days/gahshomar-light-theme-19.png \
	data/icons/days/gahshomar-light-theme-18.png \
	data/icons/days/gahshomar-light-theme-17.png \
	data/icons/days/gahshomar-light-theme-16.png \
	data/icons/days/gahshomar-light-theme-15.png \
	data/icons/days/gahshomar-light-theme-14.png \
	data/icons/days/gahshomar-light-theme-13.png \
	data/icons/days/gahshomar-light-theme-12.png \
	data/icons/days/gahshomar-light-theme-11.png \
	data/icons/days/gahshomar-light-theme-10.png \
	data/icons/days/gahshomar-light-theme-9.png \
	data/icons/days/gahshomar-light-theme-8.png \
	data/icons/days/gahshomar-light-theme-7.png \
	data/icons/days/gahshomar-light-theme-6.png \
	data/icons/days/gahshomar-light-theme-5.png \
	data/icons/days/gahshomar-light-theme-4.png \
	data/icons/days/gahshomar-light-theme-3.png \
	data/icons/days/gahshomar-light-theme-2.png \
	data/icons/days/gahshomar-light-theme-1.png \
	data/icons/days/gahshomar-dark-theme-31.png \
	data/icons/days/gahshomar-dark-theme-30.png \
	data/icons/days/gahshomar-dark-theme-29.png \
	data/icons/days/gahshomar-dark-theme-28.png \
	data/icons/days/gahshomar-dark-theme-27.png \
	data/icons/days/gahshomar-dark-theme-26.png \
	data/icons/days/gahshomar-dark-theme-25.png \
	data/icons/days/gahshomar-dark-theme-24.png \
	data/icons/days/gahshomar-dark-theme-23.png \
	data/icons/days/gahshomar-dark-theme-22.png \
	data/icons/days/gahshomar-dark-theme-21.png \
	data/icons/days/gahshomar-dark-theme-20.png \
	data/icons/days/gahshomar-dark-theme-19.png \
	data/icons/days/gahshomar-dark-theme-18.png \
	data/icons/days/gahshomar-dark-theme-17.png \
	data/icons/days/gahshomar-dark-theme-16.png \
	data/icons/days/gahshomar-dark-theme-15.png \
	data/icons/days/gahshomar-dark-theme-14.png \
	data/icons/days/gahshomar-dark-theme-13.png \
	data/icons/days/gahshomar-dark-theme-12.png \
	data/icons/days/gahshomar-dark-theme-11.png \
	data/icons/days/gahshomar-dark-theme-10.png \
	data/icons/days/gahshomar-dark-theme-9.png \
	data/icons/days/gahshomar-dark-theme-8.png \
	data/icons/days/gahshomar-dark-theme-7.png \
	data/icons/days/gahshomar-dark-theme-6.png \
	data/icons/days/gahshomar-dark-theme-5.png \
	data/icons/days/gahshomar-dark-theme-4.png \
	data/icons/days/gahshomar-dark-theme-3.png \
	data/icons/days/gahshomar-dark-theme-2.png \
	data/icons/days/gahshomar-dark-theme-1.png

SUBDIRS = \
	GahShomar \
	data
